<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/walletGroup">
        <item
            android:id="@+id/addAssetMenuItem"
            android:icon="@drawable/ic_add"
            android:title="@string/add"
            app:showAsAction="ifRoom" />
    </group>
</menu>