<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="@dimen/defaultElevation"
            app:tabIndicatorColor="@color/green"
            app:tabSelectedTextColor="@color/green"
            app:tabTextAppearance="@style/MyTabTextAppearance"
            app:tabTextColor="@color/gray" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include
        android:id="@+id/incEmptyWalletLayout"
        layout="@layout/layout_empty_wallet"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
