...
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultSpace" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_asset_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/defaultSpace"
        android:paddingTop="@dimen/defaultSpace"
        android:visibility="gone"
...
